--- a/src/global.scss
+++ b/src/global.scss
@@ -36,9 +36,9 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 
-body{
-    background-image: url(../src/assets/backgroud_login.png);
-}
+// body{
+//     background-image: url(../src/assets/backgroud_login.png);
+// }
 
 @tailwind base;
 @tailwind components;
