--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,10 +24,10 @@
         <div class="space-y-2">
           <label class="text-sm font-medium text-gray-700" for="password">Password</label>
           <input
-          [(ngModel)]="contrasena"
-            name="contrasena"
+          [(ngModel)]="passwordEncrypt"
+            name="passwordEncrypt"
             type="password"
-            id="contrasena"
+            id="passwordEncrypt"
             placeholder="Enter your password"
             class="custom-input w-full h-12 border border-gray-200 rounded-lg pl-3"
             required
